--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         </div>
 
         <div class="text-box">
-            <h1 class="headin-primary"></h1>
-            <span class="heading-primary-main">Universe</span>
-            <span class="heading-primary-sub">is where life happens</span>
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Universe</span>
+                <span class="heading-primary-sub">is where life happens</span>
+            </h1>
+            <a href="#" class="btn">Learn More</a>
         </div>
     </header>
 
